# Bachelor

./: CMakeLists.txt  Makefile  README - en.txt  README - sk.txt  cutSizeBisection.cpp  cutSizeBisection.hpp  graph.txt  koliskaGraph.txt  main(old version).cpp  main.cpp  oneHelpfulSet.cpp  oneHelpfulSet.hpp  pathDecomposition.cpp  pathDecomposition.hpp  petersen.txt  redBlackEdges.cpp  redBlackEdges.h  redBlackEdges.hpp  simple_test.cpp  snarkJ9.txt  test.cpp  test_redBlackEdges.cpp
graph_examples/: bigGraph.txt  graph.txt  graph100.txt  graph1000.txt  graph500.txt  koliskaGraph.txt  myGraph.txt  petersen.txt  snarkJ9.txt  symetricGraph.txt
